# PyDRex

./: .pre-commit-config.yaml  AlternativeFunctions.py  CHANGELOG.md  Clean.sh  DRexParam.py  Makefile  PlotDRex.py  PyDRex.py  README.md  index.html  job.sh  justfile  pathlineIVP.py  pydrex.html  pyproject.toml  pytest.ini  search.js  setup.cfg  setup.py  startWorkerNode.sh  tests.html
.github/workflows/: ci.yml  docs.yml
data/: 2d_mesh_test.py  pydrex.ini
data/outputs/: example_CPO_poles_001yz.npz  example_CPO_poles_010xz.npz  example_CPO_poles_100xy.npz  example_CPO_poles_100yz.npz
data/specs/: spec.scsv
data/vtu/: 2d_corner_flow_2cmyr.vtu  2d_corner_flow_4cmyr.vtu  2d_corner_flow_6cmyr.vtu  2d_corner_flow_8cmyr.vtu
docs/template/: README.md  index.html.jinja2  math.html.jinja2  module.html.jinja2  syntax-highlighting.css  theme.css
examples/fluidity/: README.md  envcheck.sh  load_modules.sh  pbsrun_advection2d.sh  pbsrun_cornerflow2d.sh
examples/fluidity/advection2d/: Makefile  advection2d.flml  advection2d.py
examples/fluidity/corner2d/: Makefile  corner2d.flml  corner2d.py
examples/fluidity/cornerflow2d/: Makefile  README.md  corner_flow_2d.flml  corner_flow_2d.py  meshgen.py
examples/fluidity/ridge2d/: Makefile  ridge2d.flml  ridge2d.geo  ridge2d.py
examples/shearbox/: run.sh
examples/shearbox/src/: shearbox_500.ini  shearbox_500_particles.flml  shearbox_gmsh.py  shearbox_pydrex.py  shearbox_single.ini  shearbox_single_particle.flml
examples/standalone/: cornerflow_simple.py
pbs_cluster_instructions/: startWorkerNode.sh
pydrex/: axes.html  cli.html  core.html  deformation_mechanism.html  diagnostics.html  exceptions.html  geometry.html  interpolations.html  io.html  legacy.html  logger.html  minerals.html  mock.html  pathlines.html  run.html  stats.html  stiffness.html  tensors.html  utils.html  velocity.html  velocity_gradients.html  viscosity.html  visualisation.html  vtk_helpers.html
src/: AlternativeFunctions.py  DRexParam.py  PyDRex.py  PyDRexFullIVP.py
src/fortran_modules/: core.f03  misc.f03
src/initial_implementation/: DRexParam.py  PyDRex.py  PyDRexFullIVP.py  README.md
src/initial_implementation/pbs_cluster_instructions/: job.sh
src/initial_implementation/visualisation/: PlotDRex.py  pathlineIVP.py
src/pydrex/: DRexParam.py  PlotDRex.py  __init__.py  axes.py  cli.py  core.py  deformation_mechanism.py  diagnostics.py  distributed.py  exceptions.py  fabric.py  geometry.py  interpolations.py  io.py  legacy.py  logger.py  mesh.py  minerals.py  mock.py  pathlineIVP.py  pathlines.py  polefigures.py  run.py  stats.py  stiffness.py  tensors.py  utils.py  velocity.py  velocity_gradients.py  viscosity.py  visualisation.py  vtk_helpers.py
src/pydrex/data/: 2d_mesh_test.py
src/pydrex/data/drexF90/: olA_D1E4_dt50_X0_L5.scsv
src/pydrex/data/meshes/: corner2d_2cmyr_5e5x1e5.scsv
src/pydrex/data/outputs/: example_CPO_poles_001xy.npz  example_CPO_poles_001xz.npz  example_CPO_poles_010xy.npz  example_CPO_poles_010yz.npz  example_CPO_poles_100xz.npz  example_CPO_resampled.npz  example_mineral.npz
src/pydrex/data/rng/: hexaxis_nearX45_seeds.scsv  seeds.scsv
src/pydrex/data/specs/: spec.toml  start.scsv  steady_mesh.toml
src/pydrex/data/steadyflow/: corner2d_2cmyr_5e5x1e5.vtu
tests/: README.md  __init__.py  conftest.html  conftest.py  test_config.html  test_config.py  test_core.html  test_core.py  test_corner_flow_2d.html  test_corner_flow_2d.py  test_diagnostics.html  test_diagnostics.py  test_doctests.html  test_doctests.py  test_geometry.html  test_geometry.py  test_minerals.py  test_polefigures.py  test_scsv.html  test_scsv.py  test_simple_shear_2d.html  test_simple_shear_2d.py  test_simple_shear_3d.html  test_simple_shear_3d.py  test_tensors.html  test_tensors.py  test_vortex_2d.html  test_vortex_2d.py  test_vtk_helpers.html  test_vtk_helpers.py
tools/: drex_forward_simpleshear.f90  find_45_seeds.py  h5part_reader.py  pbs_start_ray_cluster.sh  pbs_start_ray_worker.sh  perf_compare.sh  pfplot.py  run_fortran_ensemble.sh  simple_shear_2d.py  venv_install.sh
tools/pbs_scripts/: run_test_ray_cluster_setup.sh
visualisation/: PlotDRex.py  pathlineIVP.py
