# Boilerplate for modern (PEP517, PEP518) build systems.
# The setup.cfg metadata may eventually migrate over here, see:
# https://github.com/pypa/setuptools/issues/1688
# https://www.python.org/dev/peps/pep-0621/
# https://snarky.ca/what-the-heck-is-pyproject-toml/
[build-system]
requires = ["setuptools >= 42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

# Automatically use the version number from vcs (e.g. git) tags,
# <https://github.com/pypa/setuptools_scm>.
[tool.setuptools_scm]

# Some global pytest configuration settings, avoids having an extra pytest.ini file.
[tool.pytest.ini_options]
# NOTE: Do NOT use pytest log_cli option, see tests/conftest for logging setup.
# Only look in '.tests/`, don't search git subprojects/worktrees or anything like that,
# <https://github.com/pytest-dev/pytest/issues/10298>.
testpaths = ["tests"]
# --tb=short : Use short tracebacks, terminal scrollback is precious.
# --show-capture=no : Don't show captured output (stdout/stderr/logs) for failed tests.
addopts = "--tb=short --show-capture=no"
