# Use modern (PEP621, PEP660) setuptools build system.
# PEP 660 editable installs: <https://github.com/pypa/setuptools/blob/main/CHANGES.rst#v6400>.
# Python 3.11 support: <https://github.com/pypa/setuptools_scm/blob/main/CHANGELOG.rst#v710>.
[build-system]
requires = ["setuptools >= 64", "setuptools_scm[toml]>=7.1"]
build-backend = "setuptools.build_meta"

# Automatically use the version number from vcs (e.g. git) tags,
# <https://github.com/pypa/setuptools_scm>.
[tool.setuptools_scm]

# Docs: <https://packaging.python.org/en/latest/specifications/declaring-project-metadata/>.
# Example: <https://packaging.python.org/en/latest/specifications/declaring-project-metadata/#example>.
[project]
name = "pydrex"
dynamic = ["version"]  # Managed by setuptools_scm.
description = "Dynamic CPO calculations for olivine-enstatite polycrystal aggregates"
readme = "README.md"
requires-python = ">=3.11"  # We use tomllib: <https://docs.python.org/3/library/tomllib.html>.
license = {file = "LICENSE"}
authors = [
    {name = "Thomas Duvernay", email = "td75013@hotmail.fr"},
    {name = "Leon Bilton", email = "adigitoleo@dissimulo.com"},
    {name = "Chris Mathews"},
]
keywords = ["CPO", "LPO", "olivine", "deformation", "anisotropy", "crystallography"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 2 - Pre-Alpha",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]

dependencies = [
    "numpy >= 1.8",  # <https://numpy.org/doc/stable/reference/generated/numpy.linalg.eigvalsh.html>
    "numba >= 0.5",  # <https://numba.pydata.org/numba-doc/latest/release-notes.html#version-0-50-0-jun-10-2020>
    "scipy >= 1.2",  # <https://github.com/scipy/scipy/pull/9176>
    "python-frontmatter",  # For YAML headers of plaintext datafiles.
    "vtk",  # TODO: Remove in favour of meshio when interpolators are fixed.
    "meshio",  # For reading VTK and other meshes.
]

[project.optional-dependencies]
test = ["pytest", "matplotlib"]
doc = ["pdoc"]
dev = ["pytest", "matplotlib", "pdoc", "flake8", "black", "h5py", "isort", "ipython"]

[project.urls]
repository = "https://github.com/Patol75/PyDRex/"
documentation = "https://patol75.github.io/PyDRex/"

[project.scripts]
pydrex-polefigures = "pydrex.cli:CLI_HANDLERS.pole_figure_visualiser"

# Make setuptools include datafiles in wheels/packages.
# Data files must be inside the package directory.
[tool.setuptools]
include-package-data = true

# Use src/<package> layout to keep things clean.
[tool.setuptools.packages.find]
where = ["src"]

# Some global pytest configuration settings, avoids having an extra pytest.ini file.
[tool.pytest.ini_options]
# NOTE: Do NOT use pytest log_cli option, see tests/conftest for logging setup.
# Only look in '.tests/`, don't search git subprojects/worktrees or anything like that,
# <https://github.com/pytest-dev/pytest/issues/10298>.
testpaths = ["tests"]
# --tb=short : Use short tracebacks, terminal scrollback is precious.
# --show-capture=no : Don't show captured output (stdout/stderr/logs) for failed tests.
# --doctest-modules : Run doctest snippets in docstrings
addopts = "--tb=short --show-capture=no --doctest-modules"
