# Packaging configuration and metadata.
[metadata]
name = pydrex
description = Dynamic LPO calculations for olivine-enstatite polycrystal aggregates
long_description = file: README.md
keywords = LPO, olivine, deformation, crystal, evolution
license = GNU General Public License v3.0 only
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    Intended Audience :: Science/Research

[options]
packages = find:
package_dir = src

scripts =
    Clean.sh
    job.sh
    startWorkerNode.sh

install_requires =
    numpy >= 1.8  # https://numpy.org/doc/stable/reference/generated/numpy.linalg.eigvalsh.html
    numba >= 0.5  # https://numba.pydata.org/numba-doc/latest/release-notes.html#version-0-50-0-jun-10-2020
    scipy >= 1.2  # https://github.com/scipy/scipy/pull/9176
    vtk

extras_require =
    plot = matplotlib
    svml = icc_rt
    ray = ray
    charm = charm4py

setup_requires =
    setuptools_scm

[options.packages.find]
where = src
