# Packaging configuration and metadata.
# Docs (well, kind of) are at https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
[metadata]
name = pydrex
description = Dynamic LPO calculations for olivine-enstatite polycrystal aggregates
long_description = file: README.md
keywords = LPO, olivine, deformation, crystal, evolution
license = GNU General Public License v3.0 only
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    Intended Audience :: Science/Research

[options]
# Find all the *.py files in package_dir (recursive).
packages = find:
# YES, IT NEEDS THE SECOND '=', https://github.com/pypa/setuptools/issues/1259
package_dir =
    = src

scripts =
    Clean.sh
    job.sh
    startWorkerNode.sh

# python_requires = 3.8
# DOESN'T WORK: https://github.com/pypa/setuptools/issues/1633
# pip install vtk fails on python 3.9 https://gitlab.kitware.com/vtk/vtk/-/issues/18074
install_requires =
    numpy >= 1.8  # https://numpy.org/doc/stable/reference/generated/numpy.linalg.eigvalsh.html
    numba >= 0.5  # https://numba.pydata.org/numba-doc/latest/release-notes.html#version-0-50-0-jun-10-2020
    scipy >= 1.2  # https://github.com/scipy/scipy/pull/9176
    vtk

setup_requires =
    setuptools_scm

[options.extras_require]
plot = matplotlib
svml = icc_rt
ray = ray
charm = charm4py

[options.packages.find]
where = src
