# Packaging configuration and metadata.
# <https://packaging.python.org/en/latest/tutorials/packaging-projects/>
# <https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html>
# <https://docs.python.org/3/distutils/configfile.html>
[metadata]
name = pydrex
description = Dynamic CPO calculations for olivine-enstatite polycrystal aggregates
long_description = file: README.md
keywords = CPO, LPO, olivine, deformation, anisotropy, crystallography
license = GNU General Public License v3.0 only
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    Intended Audience :: Science/Research

[options]
# YES, IT NEEDS THE SECOND '=', <https://github.com/pypa/setuptools/issues/1259>.
package_dir =
    = src
# Find all the *.py files in options.packages.find["where"] (recursive).
packages = find:

# ===== Runtime dependencies =====
# It would be nice to require a specific (minimum) Python version,
# but python_version is broken, see e.g. <https://github.com/pypa/setuptools/issues/1633>.
# - `numpy` 1.8 for <https://numpy.org/doc/stable/reference/generated/numpy.linalg.eigvalsh.html>
# - `numba` 0.5 for <https://numba.pydata.org/numba-doc/latest/release-notes.html#version-0-50-0-jun-10-2020>
# - `scipy` 1.2 for <https://github.com/scipy/scipy/pull/9176>
# - `python-frontmatter` to read yaml headers of plain text datafiles
# - `vtk` for the binary data readers
install_requires =
    numpy >= 1.8
    numba >= 0.5
    scipy >= 1.2
    python-frontmatter
    meshio
    vtk

# ===== Optional dependencies =====
[options.extras_require]
test = pytest  # For the test suite.
doc = pdoc  # For generating HTML docs.
dev =  # Dev tools, see .pre-commit-config.yaml for recommended command line flags.
    flake8
    black
    isort
    h5py
    ipython

# ===== Entry points =====
# [options.entry_points]
# console_scripts =
#     pydrex = pydrex.run:main

# Required for src/ setup.
[options.packages.find]
where = src
